# permish

./: .env.example  .envrc  .gitignore  CLAUDE.md  Caddyfile  Caddyfile.dev  dev.sh  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  desktop-build.yml  docs.yml  mobile-build.yml
.obsidian/: workspace.json
backend/: .dockerignore  .env.example  Dockerfile  package.json  pnpm-lock.yaml
backend/data/: permish.db-shm  permish.db-wal  permission-forms.db-shm  permission-forms.db-wal
backend/src/: config.js  index.js
backend/tests/: admin.test.js  auth.test.js  config.test.js  db.test.js  events.test.js  form.test.js  groups.test.js  health.test.js  profiles.test.js  setup.js  submissions.test.js
btrs/: config.json  index.md  project-map.md
btrs/.obsidian/: app.json  workspace.json
btrs/work/: status.md
docs/: DEPLOYMENT.md  DEVELOPMENT.md
docs-site/: astro.config.mjs
frontend/: Dockerfile  capacitor.config.ts  components.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: README.md  icon.icns
frontend/src-tauri/sidecars/: README.md
frontend/src-tauri/src/: main.rs
pb_migrations/: 1712246400_initial_schema.js  1777090400_rename_yw_class_keys.js  1777094000_add_groups_and_invites.js  1777140000_add_audit_log.js
scripts/: README.md  backup.sh  migrate-to-pocketbase.js  package.json  pnpm-lock.yaml  test-pocketbase-e2e.js
sidecar/: .dockerignore  .gitignore  Dockerfile  package.json
(+271 files in other folders)
